--- a/app/assets/components/ui-elements/markdown-content.html
+++ b/app/assets/components/ui-elements/markdown-content.html
@@ -17,6 +17,10 @@
           p, h1, h2, h3, h4, h5, h6, ul, ol {
               margin-top: 0;
           }
+          p:last-child, h1:last-child, h2:last-child, h3:last-child,
+          h4:last-child, h5:last-child, h6:last-child, ul:last-child, ol:last-child {
+              margin-bottom: 0;
+          }
       </style>
 
   </template>
