Change default author to display role when unknown

--- a/app/assets/components/mixins/oj-paper-helpers.html
+++ b/app/assets/components/mixins/oj-paper-helpers.html
@@ -38,6 +38,17 @@
             return false;
         },
 
+        roleForAssignment: function(a) {
+            // Assumes that assignments are ordered with 1 editor and 1 submittor followed by the reviewers
+
+            if (!a || !a.role)
+                return null;
+            else if (a.role == 'reviewer' && a.index)
+                return 'Reviewer #' + (a.index-1);
+            else
+                return Oj.globalExpressions.capitalize(a.role);
+        },
+
         isOwnAnnotation: function(annotation, paper) {
             if (!annotation || !paper)
               return false;
@@ -80,6 +91,17 @@
               return a.user.name;
           else
               return null;
+        },
+
+        authorOrRoleFor: function(paper, assignment_sha) {
+            var a = this.assignmentFromSha(paper, assignment_sha);
+            if (!a)
+                return null;
+
+            if (a.user)
+                return a.user.name;
+            else
+                return this.roleForAssignment(a);
         },
 
         sortAssignments: function(assignments) {
