--- a/app/assets/components/mixins/oj-global-expressions.html
+++ b/app/assets/components/mixins/oj-global-expressions.html
@@ -4,6 +4,10 @@
 
         MONTH_NAMES: [ 'Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec' ],
 
+        ignoreEvent: function(event) {
+            event && event.preventDefault() || event.stopPropagation();
+        },
+
         isArray: function(obj) {
             return Array.isArray(obj);
         },
