Click on background to close annotation

--- a/app/assets/components/subpages/oj-review-page.html
+++ b/app/assets/components/subpages/oj-review-page.html
@@ -93,6 +93,7 @@
       }
 
       #rhs {
+          position:      relative;     /* So that we can extend annotation list to full height */
           box-sizing:    border-box;
           width:         505px;
           height:        100%;
@@ -162,6 +163,7 @@
 
       oj-annotation-list {
           position:   absolute;
+          height:     100%;
           width:      505px;
       }
 
