--- a/app/assets/components/ui-elements/stacked-pdf-reader.html
+++ b/app/assets/components/ui-elements/stacked-pdf-reader.html
@@ -10,17 +10,17 @@
       </template>
     </div>
 
-
       <style>
           :host {
-              padding: 2px;
-              height: 100%;
-              width: 100%;
+              box-sizing: border-box;
+              padding:    2px 4px 2px 8px;
+              height:     100%;
+              width:      100%;
               overflow-y: visible;
           }
           #pages{
-              width:100%;
-              height: 100%;
+              width:   100%;
+              height:  100%;
           }
 
           stacked-pdf-page:not(:last-of-type) {
