--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -62,7 +62,7 @@ body /deep/ {
       border-color: silver;
     }
 
-    &[dismissive]:not(:hover) {
+    &[dialog-dismiss]:not(:hover) {
       border-color: silver;
       color: silver;
     }
