Correct display of completion status

--- a/app/assets/components/ui-elements/oj-assigned-users-list.html
+++ b/app/assets/components/ui-elements/oj-assigned-users-list.html
@@ -36,7 +36,7 @@
                     as="assignment">
               <oj-user-tag class="reviewer"
                            assignment="{{assignment}}"
-                           showcompleted="{{showCompleted}}"
+                           show-completed="{{showCompleted}}"
                            removable="{{editable}}"
                            on-remove-user="removeReviewer"></oj-user-tag>
           </template>
