--- a/app/assets/components/ui-elements/oj-user-tag.html
+++ b/app/assets/components/ui-elements/oj-user-tag.html
@@ -2,13 +2,6 @@
 
   <template>
 
-      <template is="dom-if" if="{{showCompletionCheckbox(assignment, showCompleted)}}">
-          <iron-icon id=completion-icon
-                     class$="{{assignment.reviewer_accept)}}"
-                     icon="{{getCompletionIcon(assignment)}}"
-                     title="{{getCompletionTip(assignment)}}"></iron-icon>
-      </template>
-
       <span class="name">
           <template is="dom-if" if="{{assignment.user}}">
               <span>{{assignment.user.name}}</span>
@@ -19,6 +12,14 @@
       </span>
 
       <template is="dom-if" if="{{showRemover(assignment, removable)}}"><a class="remover" href="#" on-click="remove">×</a></template>
+
+      <template is="dom-if" if="{{showCompletionCheckbox(assignment, showCompleted)}}">
+          <iron-icon id=completion-icon
+                     class$="{{assignment.reviewer_accept}}"
+                     icon="{{getCompletionIcon(assignment)}}"
+                     title="{{getCompletionTip(assignment)}}"></iron-icon>
+          <span id="completion-text" hidden?="{{!assignment.reviewer_accept}}">{{getCompletionTip(assignment)}}</span>
+      </template>
 
       <style>
 
@@ -36,23 +37,30 @@
           }
 
           #completion-icon {
-              width:          16px !important;
-              height:         16px !important;
-              vertical-align: -2px !important;
+              width:          24px !important;
+              height:         24px !important;
+              margin-left:    12px;
               background:     #e4e4e4;
-              color:          black;
+              color:          hotpink;
           }
           #completion-icon.accept {
               color:         black;
           }
-          #completion-icon.accept {
+          #completion-icon.accept_with_minor {
               color:         blue;
           }
-          #completion-icon.accept {
+          #completion-icon.accept_with_major {
               color:         orange;
           }
           #completion-icon.reject {
               color:         red;
+          }
+
+          #completion-text {
+              display:     inline-block;
+              color:       #7d7d7d;
+              font-weight: 400;
+              font-size:   14px;
           }
 
       </style>
@@ -107,13 +115,13 @@
       getCompletionTip: function (assignment) {
         switch (assignment.reviewer_accept) {
         case 'accept':
-          return 'Accept with No Revisions';
+          return 'Accepted with No Revisions';
         case 'accept_with_minor':
-          return 'Accept with Minor Revisions';
+          return 'Accepted with Minor Revisions';
         case 'accept_with_major':
-          return 'Accept with Major Revisions';
+          return 'Accepted with Major Revisions';
         case 'reject':
-          return 'Reject';
+          return 'Rejected';
         default:
           return 'Review Not Complete';
         }
